--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600|Open+Sans:400,600" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
     <style>
-      html {
+      body {
+        font-family: 'Open Sans', sans-serif;
         background: url("https://i.imgur.com/LQXPrTI.jpg") no-repeat center center fixed;
         -webkit-background-size: cover;
            -moz-background-size: cover;
