--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600|Open+Sans:400,600" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:500|Open+Sans:400,600" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
     <style>
       body {
@@ -14,6 +14,8 @@
              -o-background-size: cover;
                 background-size: cover;
       }
+      h1, h2, h3, h4, h5, h6,
+      .h1, .h2, .h3, .h4, .h5, .h6 {font-family: 'Montserrat', sans-serif; font-weight: 500;}
     </style>
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
