Added the layout with row and columns.

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
     <title>Harry Potter Pusher</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6"></div>
+        <div class="col-sm-6"></div>
+      </div>
+    </div>
   </body>
 </html>
