--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,49 @@
       }
       h1, h2, h3, h4, h5, h6,
       .h1, .h2, .h3, .h4, .h5, .h6 {font-family: 'Montserrat', sans-serif; font-weight: 500;}
+      .main-wrapper {margin-top: 100px;}
     </style>
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     <title>Harry Potter Pusher</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container main-wrapper">
       <div class="row">
-        <div class="col-sm-6"></div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Harry Potter House Selection</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Please select your favourite house from the following.</h6>
+              <form id="voteForm">
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="house" id="gryffindor" value="Gryffindor" />
+                  <label class="form-check-label" for="gryffindor">
+                    Gryffindor
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="house" id="hufflepuff" value="Hufflepuff" />
+                  <label class="form-check-label" for="hufflepuff">
+                    Hufflepuff
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="house" id="ravenclaw" value="Ravenclaw" />
+                  <label class="form-check-label" for="ravenclaw">
+                    Ravenclaw
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="house" id="slytherin" value="Slytherin" />
+                  <label class="form-check-label" for="slytherin">
+                    Slytherin
+                  </label>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
         <div class="col-sm-6"></div>
       </div>
     </div>
