Updated the layout to use medium screen.

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="container main-wrapper">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-md-6">
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Harry Potter House Selection</h5>
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6"></div>
+        <div class="col-md-6"></div>
       </div>
     </div>
   </body>
