--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
       h1, h2, h3, h4, h5, h6,
       .h1, .h2, .h3, .h4, .h5, .h6 {font-family: 'Montserrat', sans-serif; font-weight: 500;}
       .main-wrapper {margin-top: 100px;}
+      .form-check-input {vertical-align: middle; position: relative; top: -5px; margin-right: 5px;}
+      .form-check {margin-bottom: 5px;}
     </style>
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
