Add the submit button.

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
                     Slytherin
                   </label>
                 </div>
+                <button type="submit" class="btn btn-primary btn-sm mt-2">Vote</button>
               </form>
             </div>
           </div>
