--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       .main-wrapper {margin-top: 100px;}
       .form-check-input {vertical-align: middle; position: relative; top: -5px; margin-right: 5px;}
       .form-check {margin-bottom: 5px;}
+      #chartContainer {height: 300px;}
     </style>
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
@@ -62,7 +63,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6"></div>
+        <div class="col-md-6">
+          <div id="chartContainer" class="card"></div>
+        </div>
       </div>
     </div>
   </body>
