--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,12 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:500|Open+Sans:400,600" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-    <style>
-      body {
-        font-family: 'Open Sans', sans-serif;
-        background: url("https://i.imgur.com/LQXPrTI.jpg") no-repeat center center fixed;
-        -webkit-background-size: cover;
-           -moz-background-size: cover;
-             -o-background-size: cover;
-                background-size: cover;
-      }
-      h1, h2, h3, h4, h5, h6,
-      .h1, .h2, .h3, .h4, .h5, .h6 {font-family: 'Montserrat', sans-serif; font-weight: 500;}
-      .main-wrapper {margin-top: 100px;}
-      .form-check-input {vertical-align: middle; position: relative; top: -5px; margin-right: 5px;}
-      .form-check {margin-bottom: 5px;}
-      #chartContainer {height: 300px;}
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css" />
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pusher/4.3.0/pusher.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
+    <script src="assets/js/script.js"></script>
     <title>Harry Potter Pusher</title>
   </head>
   <body>
