--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <title>Harry Potter Pusher</title>
   </head>
   <body>
+    <div class="text-center main-logo">
+      <img src="https://i.imgur.com/AIdnOjn.png" alt="Harry Potter Logo" />
+    </div>
     <div class="container main-wrapper">
       <div class="row">
         <div class="col-md-6">
