--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pusher/4.3.0/pusher.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/jquery.canvasjs.min.js"></script>
     <script src="assets/js/script.js"></script>
     <title>Harry Potter Pusher</title>
   </head>
